remove necessity for make

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -1,6 +1,6 @@
 % Do not change the section below
 % ============================================================================
-\documentclass[conference,compsoc,a4paper]{IEEEtran}
+\documentclass[conference,compsoc,a4paper]{common/IEEEtran}
 \IEEEoverridecommandlockouts
 
 \usepackage{nimbusmononarrow}
@@ -31,7 +31,7 @@
 ]{siunitx}
 \usepackage{booktabs}
 \usepackage{tikz}
-\usepackage{moeptikz}
+\usepackage{common/moeptikz}
 % ============================================================================
 
 
