--- a/talk/include/slides.tex
+++ b/talk/include/slides.tex
@@ -1,6 +1,6 @@
 \usepackage[utf8]{inputenc}
-\usepackage{packages}
-\usepackage{beamermods}
+\usepackage{tumcd/packages}
+\usepackage{tumcd/beamermods}
 
 % For beamer mode (default):
 \author[S. G\"unther]{Stephan Günther}
