--- a/talk/tumcd/packages.sty
+++ b/talk/tumcd/packages.sty
@@ -19,11 +19,11 @@
 \usepackage{tikz}
 \usetikzlibrary[calc,shapes,arrows,positioning]
 
-\usepackage{tumcolor}
-\usepackage{tumlogo}
-\usepackage{tumlang}
-\usepackage{tumcontact}
-\usepackage[noshading]{moeptikz}
+\usepackage{tumcd/tumcolor}
+\usepackage{tumcd/tumlogo}
+\usepackage{tumcd/tumlang}
+\usepackage{tumcd/tumcontact}
+\usepackage[noshading]{tumcd/moeptikz}
 
 \usepackage[binary-units]{siunitx}
 \sisetup{
