--- a/talk/tumcd/tumcontact.sty
+++ b/talk/tumcd/tumcontact.sty
@@ -2,8 +2,8 @@
 \ProvidesPackage{tumcontact}[2016/03/18 TUM contact information]
 
 \RequirePackage{pbox}
-\RequirePackage{tumlogo}
-\RequirePackage{tumlang}
+\RequirePackage{tumcd/tumlogo}
+\RequirePackage{tumcd/tumlang}
 
 
 %\TUMHeader*[color]{height}
