--- a/paper/include/formatting.tex
+++ b/paper/include/formatting.tex
@@ -37,11 +37,11 @@ Format your tables as shown in Table~\ref{shu1ioKo}.
 		\textbf{SI prefix} & \textbf{Power of 10} && \textbf{Binary prefix} &
 		\textbf{Power of 2}\\
 		\midrule
-		\si{\kilo} & $10^3$ && \si{\kibi} & $2^{10}$\\
-		\si{\mega} & $10^6$ && \si{\mebi} & $2^{20}$\\
-		\si{\giga} & $10^9$ && \si{\gibi} & $2^{30}$\\
-		\si{\tera} & $10^{12}$ && \si{\tebi} & $2^{40}$\\
-		\si{\peta} & $10^{15}$ && \si{\pebi} & $2^{50}$\\
+		\si{\kilo\nothing} & $10^3$ && \si{\kibi\nothing} & $2^{10}$\\
+		\si{\mega\nothing} & $10^6$ && \si{\mebi\nothing} & $2^{20}$\\
+		\si{\giga\nothing} & $10^9$ && \si{\gibi\nothing} & $2^{30}$\\
+		\si{\tera\nothing} & $10^{12}$ && \si{\tebi\nothing} & $2^{40}$\\
+		\si{\peta\nothing} & $10^{15}$ && \si{\pebi\nothing} & $2^{50}$\\
 		\bottomrule
 	\end{tabular}
 \end{table}
