--- a/talk/tumcd/tumcontact.sty
+++ b/talk/tumcd/tumcontact.sty
@@ -1,12 +1,41 @@
+%% tumcontact.sty
+%
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License, either version 1.3
+% of this license or (at your option) any later version.
+% The latest version of this license is in
+%   http://www.latex-project.org/lppl.txt
+% and version 1.3 or later is part of all distributions of LaTeX
+% version 2005/12/01 or later.
+%
+% This work has the LPPL maintenance status `maintained'.
+%
+% The Current Maintainer of this work is Stephan Günther.
+%
+% Copyright 2022 Chair of Network Architectures and Services, TUM
+%
+% This work consists of the files listed in manifest.txt.
+
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{tumcontact}[2016/03/18 TUM contact information]
 
 \RequirePackage{pbox}
-\RequirePackage{tumcd/tumlogo}
-\RequirePackage{tumcd/tumlang}
+\RequirePackage{tumlogo}
+\RequirePackage{tumlang}
 
+\localemacro{\orgname}{Technical University of Munich}{Technische Universität München}
+\def\orglogo#1{\TUMLogo{#1}}
+%\def\orglogo#1{\includegraphics[height=#1]{conf/logo}}
+\localemacro{\school}{School of Computation, Information, and Technology}{School of Computation, Information, and Technology}
+\localemacro{\department}{Informatics}{Informatik}
+\localemacro{\chair}{Chair of Network Architectures and Services}{Lehrstuhl für Netzarchitekturen und Netzdienste}
+\localemacro{\chairhead}{Prof.~Dr.-Ing.\ Georg Carle}{Prof.~Dr.-Ing.\ Georg Carle}
 
-%\TUMHeader*[color]{height}
+\IfFileExists{conf/organization.tex}{%
+	\input{conf/organization}%
+}{%
+}
+
 \newif\iftumcontact@displaytext
 \newlength{\tumcontact@unitsize}
 \newlength{\tumcontact@fontsize}
@@ -21,24 +50,17 @@
 	\normalfont\sffamily%
 	\color{#1}%
 	\noindent%
-	\ifdefined\departmentlogo%
-		\ifdefined\chairname%
-		\else%
-			\departmentlogo[#1]{\tumcontact@unitsize}%
-			\hspace*{0.5\tumcontact@unitsize}%
-		\fi%
-	\fi%
 	\iftumcontact@displaytext%
 		\pbox[b][\tumcontact@unitsize][s]{\textwidth}{%
-			\strut\ifdefined\chairname\chairname\fi%
+			\strut\ifdefined\chair\chair\fi%
 			\vspace{\fill}\\%
-			\strut\ifdefined\departmentname\departmentname\fi%
+			\strut\ifdefined\school\school\fi%
 			\vspace{\fill}\\%
-			\strut\TUMname%
+			\strut\orgname%
 		}%
 	\fi%
 	\hspace*{\fill}%
-	\TUMLogo[#1]{\tumcontact@unitsize}%
+	\orglogo{\tumcontact@unitsize}
 	\endgroup%
 }%
 \def\TUMheader{%
@@ -55,9 +77,9 @@
 	\noindent%
 	\pbox[b]{\textwidth}{%
 		\pbox[t]{\textwidth}{%
-			\textbf{\TUMname}\\%
-			\ifdefined\departmentname\departmentname\fi\\%
-			\ifdefined\chairname\chairname\fi%
+			\textbf{\orgname}\\%
+			\ifdefined\school\school\fi\\%
+			\ifdefined\chair\chair\fi%
 		}%
 		\tumcontact@footer@addtext%
 		\\%
