--- a/talk/README
+++ b/talk/README
@@ -11,6 +11,10 @@ Dependencies
 
 In order to compile the template you need the following packages:
     texlive-full >= 2015
+    make
+
+For markdown support (optional) you additionally need:
+    pandoc
 
 Tested under Linux (Debian) and OSX only.
 
