--- a/talk/slides.tex
+++ b/talk/slides.tex
@@ -1,7 +1,28 @@
-\documentclass[NET,english,beameralt]{tumcd/tumbeamer}
+\documentclass[NET,english,beameralt]{tumbeamer}
 
 % If you load additional packages, do so in packages.sty as figures are build
 % as standalone documents and you may want to have effect on them, too.
+
+% Folder structure:
+% .
+% ├── beamermods.sty                  % depricated an will be removed soon
+% ├── compile                         % remotely compile slides
+% ├── figures                         % all figures go here
+% │   └── schichtenmodelle_osi.tikz   % each .tikz or .tex is a target
+% ├── include                         % create your document here
+% │   ├── example.tex                 % example document
+% │   └── slides.tex                  % make document wide changes here
+% ├── lit.bib                         % literature
+% ├── Makefile
+% ├── moeptikz.sty                    % fancy networking symbols
+% ├── packages.sty                    % load additional packages there
+% ├── pics                            % binary pcitures go here
+% ├── slides.tex                      % main document (may be more than one)
+% ├── tumbeamer.cls
+% ├── tumcolor.sty                    % TUM color definitions
+% ├── tumcontact.sty                  % TUM headers and footers
+% ├── tumlang.sty                     % TUM names and language settings
+% └── tumlogo.sty                     % TUM logos
 
 % Configure author, title, etc. here:
 \input{include/slides}
