--- a/talk/tumcd/tumlang.sty
+++ b/talk/tumcd/tumlang.sty
@@ -1,5 +1,23 @@
+%% tumlang.sty
+%
+% This work may be distributed and/or modified under the conditions of
+% the LaTeX Project Public License, either version 1.3 of this license
+% or (at your option) any later version.
+% The latest version of this license is in
+%   http://www.latex-project.org/lppl.txt
+% and version 1.3 or later is part of all distributions of LaTeX version
+% 2005/12/01 or later.
+%
+% This work has the LPPL maintenance status `maintained'.
+%
+% The Current Maintainer of this work is Stephan Günther.
+%
+% Copyright 2016-2020 Chair of Network Architectures and Services, TUM
+%
+% This work consists of the files listed in manifest.txt.
+
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{tumlang}[2016/03/18 TUM language]
+\ProvidesPackage{tumlang}[2021/09/25 TUM language]
 
 \RequirePackage[english,ngerman]{babel}
 \RequirePackage[english=usenglishmax,ngerman=ngerman-x-latest]{hyphsubst}
@@ -19,88 +37,25 @@
 	\AtBeginDocument{\selectlanguage{ngerman}}
 }
 
-% general TUM option
-\DeclareOption{TUM}{
-	\def\TUMnameenglish{Technical University of Munich}
-	\def\TUMnamegerman{Technische Universit\"at M\"unchen}
-	\addto\captionsenglish{\def\TUMname{\TUMnameenglish}}
-	\addto\captionsngerman{\def\TUMname{\TUMnamegerman}}
-	\let\tumlang@departmentnameenglish\@undefined
-	\let\tumlang@departmentnamegerman\@undefined
-	\let\departmentlogo\@undefined
-	\let\tumlang@chairnameenglish\@undefined
-	\let\tumlang@chairnamegerman\@undefined
-	\let\chairhead\@undefined
-}
-
-% department options
-\newcommand{\tumlang@define@department}[3]
-{
-	\expandafter\def\csname#1nameenglish\endcsname{#2}
-	\expandafter\def\csname#1namegerman\endcsname{#3}
-	\addto\captionsenglish{\expandafter\def\csname#1name\endcsname{\csname#1nameenglish\endcsname}}
-	\addto\captionsngerman{\expandafter\def\csname#1name\endcsname{\csname#1namegerman\endcsname}}
-	\DeclareOption{#1}{
-		\ds@TUM
-		\def\departmentname{\csname#1name\endcsname}
-		\def\departmentlogo{\csname#1Logo\endcsname}
-	}
-}
-\tumlang@define@department{AR}{Department of Architecture}{Fakult\"at f\"ur Architektur}
-\tumlang@define@department{BGU}{Department of Civil, Geo and Environmental Engineering}{Ingenieurfakult\"at Bau Geo Umwelt}
-\tumlang@define@department{CH}{Department of Chemistry}{Fakult\"at f\"ur Chemie}
-\tumlang@define@department{EI}{Department of Electrical and Computer Engineering}{Fakult\"at f\"ur Elektrotechnik und Informationstechnik}
-\tumlang@define@department{HFP}{School of Politics}{Hochschule f\"ur Politik}
-\tumlang@define@department{IN}{Department of Informatics}{Fakult\"at f\"ur Informatik}
-\tumlang@define@department{MA}{Department of Mathematics}{Fakult\"at f\"ur Mathematik}
-\tumlang@define@department{MED}{School of Medicine}{Fakult\"at f\"ur Medizin}
-\tumlang@define@department{MW}{Department of Mechanical Engineering}{Fakult\"at f\"ur Maschinenwesen}
-\tumlang@define@department{PH}{Department of Physics}{Fakult\"at f\"ur Physik}
-\tumlang@define@department{SE}{School of Education}{School of Education}
-\tumlang@define@department{SP}{Department of Sport and Health Sciences}{Fakult\"at f\"ur Sport- und Gesundheitswissenschaften}
-\tumlang@define@department{WI}{School of Management}{Fakult\"at f\"ur Wirtschaftswissenschaften}
-\tumlang@define@department{WZW}{School of Life Sciences Weihenstephan}{Wissenschaftszentrum Weihenstephan f\"ur Ern\"ahrung, Landnutzung und Umwelt}
-
-% chair options
-\newcommand{\tumlang@define@chair}[5]
-{
-	\expandafter\def\csname#1nameenglish\endcsname{#3}
-	\expandafter\def\csname#1namegerman\endcsname{#4}
-	\addto\captionsenglish{\expandafter\def\csname#1name\endcsname{\csname#1nameenglish\endcsname}}
-	\addto\captionsngerman{\expandafter\def\csname#1name\endcsname{\csname#1namegerman\endcsname}}
-	\expandafter\def\csname#1head\endcsname{#5}
-	\DeclareOption{#1}{
-		\csname ds@#2\endcsname
-		\def\chairname{\csname#1name\endcsname}
-		\def\chairhead{\csname#1head\endcsname}
-	}
-}
-\tumlang@define@chair{NET}{IN}%
-	{Chair of Network Architectures and Services}%
-	{Lehrstuhl f\"ur Netzarchitekturen und Netzdienste}%
-	{Prof.~Dr.-Ing.\ Georg\ Carle}%
-\tumlang@define@chair{SEC}{IN}%
-	{Chair of IT Security}%
-	{Lehrstuhl f\"ur Sicherheit in der Informatik}%
-	{Prof.~Dr.\ Claudia\ Eckert}%
-\tumlang@define@chair{OS}{IN}%
-	{Chair of Operating Systems}%
-	{Lehrstuhl f\"ur Betriebssysteme}%
-	{Prof.~Dr.\ Uwe\ Baumgarten}%
-\tumlang@define@chair{SWT}{IN}%
-	{Chair of Applied Software Engineering}%
-	{Lehrstuhl f\"ur Angewandte Softwaretechnik}%
-	{Prof.~Bernd\ Br\"ugge,~Ph.\,D.}%
-
-\tumlang@define@chair{MSV}{EI}%
-	{Fachgebiet Methoden der Signalverarbeitung}%
-	{Fachgebiet Methoden der Signalverarbeitung}%
-	{Univ.-Prof.~Dr.-Ing.\ Wolfgang\ Utschick}%
 
 % unknown options
 \DeclareOption*{}
 
-\ExecuteOptions{ngerman,TUM}
+\ExecuteOptions{ngerman}
 \ProcessOptions\relax
+
+
+\newcommand{\localetext}[2]{\iflanguage{ngerman}{#2}{#1}}
+\newcommand*{\localemacro}[3]{%
+	\ifdefined\captionsenglish
+		\addto\captionsenglish{\def#1{#2}}%
+		\addto\captionsngerman{\def#1{#3}}%
+	\else
+		\AtBeginDocument{%
+			\addto\captionsenglish{\def#1{#2}}%
+			\addto\captionsngerman{\def#1{#3}}%
+		}%
+	\fi
+}
 
 \endinput
