--- a/paper/figures/mitm.tex
+++ b/paper/figures/mitm.tex
@@ -1,5 +1,5 @@
-
-
+\usepackage{tikz}
+\begin{document}
 \begin{tikzpicture}[
     scale=0.4, % Further reduced scale
     node distance=2cm, % Further reduced distance
@@ -17,4 +17,5 @@
     \draw[->,thick] (mitm) to[bend left=20] node[above,font=\tiny] {Mod} (server);
     \draw[->,thick] (server) to[bend left=20] node[below,font=\tiny] {Rsp} (mitm);
     \draw[->,thick] (mitm) to[bend left=20] node[below,font=\tiny] {Mod} (alice);
-\end{tikzpicture}
+\end{tikzpicture
+\end{document}
