--- a/paper/figures/mitm.tex
+++ b/paper/figures/mitm.tex
@@ -17,5 +17,5 @@
     \draw[->,thick] (mitm) to[bend left=20] node[above,font=\tiny] {Mod} (server);
     \draw[->,thick] (server) to[bend left=20] node[below,font=\tiny] {Rsp} (mitm);
     \draw[->,thick] (mitm) to[bend left=20] node[below,font=\tiny] {Mod} (alice);
-\end{tikzpicture
+\end{tikzpicture}
 \end{document}
