Try to fix CI problem by adding document class dependencies (why should I add it noce more in figures?)

--- a/paper/figures/fallback.tex
+++ b/paper/figures/fallback.tex
@@ -1,7 +1,9 @@
 \usepackage{tikz}
 \usetikzlibrary{positioning}
+\documentclass[conference]{IEEEtran}
+\IEEEoverridecommandlockouts
 \begin{document}
- \begin{tikzpicture}[
+\begin{tikzpicture}[
     scale=0.4, % Further reduced scale
     node distance=2cm, % Further reduced distance
     % user/.style={circle,draw,minimum size=0.6cm},
