--- a/paper/figures/proxy.tex
+++ b/paper/figures/proxy.tex
@@ -1,5 +1,7 @@
 \usepackage{tikz}
 \usetikzlibrary{positioning}
+\documentclass[conference]{IEEEtran}
+\IEEEoverridecommandlockouts
 \begin{document}
 \begin{tikzpicture}[
     scale=0.4,
