Correcting reference source

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -291,7 +291,7 @@ In conclusion, the central of network censorship circumvention is camouflage or 
 
 \bibliographystyle{ieeetr}
 
-\bibliography{ref}
+\bibliography{paper}
 
 \appendix
 \section{Setting Up Proxy Server}
