FIX: change \include{include/fallback} to \input{include/fallback}

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -281,7 +281,7 @@ After the active probing mechanism was revealed, most HTTPS-based protocols adop
 
 \begin{figure}[!h]
     \centering
-    \include{include/fallback}
+    \input{include/fallback}
     \caption{Fallback: Proxy servers filter (P) unauthentic incoming traffic (P) (Probes) and forward it to a real HTTP Server (F) and forward authentic traffic (C) to destination (D)}
     \label{fig:fallback}
 \end{figure}
