--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,4 +1,4 @@
-@INPROCEEDINGS{Heartbleed,
+@article{Heartbleed,
   author={Kyatam, Shashank and Alhayajneh, Abdullah and Hayajneh, Thaier},
   booktitle={2017 IEEE Long Island Systems, Applications and Technology Conference (LISAT)},
   title={Heartbleed attacks implementation and vulnerability},
