--- a/paper/include/mitm.tex
+++ b/paper/include/mitm.tex
@@ -1,3 +1,5 @@
+
+
 \begin{tikzpicture}[
     scale=0.4, % Further reduced scale
     node distance=2cm, % Further reduced distance
@@ -6,7 +8,7 @@
     server/.style={rectangle,draw,minimum width=1cm,minimum height=0.7cm}
 ]
     % Define nodes with shorter labels
-    \node[user] (alice) {A};
+    \node[user] (alice) {C};
     \node[attacker] (mitm) [right of=alice] {M};
     \node[server] (server) [right of=mitm] {S};
 
