--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,14 +1,13 @@
 @INPROCEEDINGS{Heartbleed,
   author={Kyatam, Shashank and Alhayajneh, Abdullah and Hayajneh, Thaier},
-  booktitle={2017 IEEE Long Island Systems, Applications and Technology Conference (LISAT)},
-  title={Heartbleed attacks implementation and vulnerability},
+  booktitle={2017 IEEE Long Island Systems, Applications and Technology Conference (LISAT)}, 
+  title={Heartbleed attacks implementation and vulnerability}, 
   year={2017},
   volume={},
   number={},
   pages={1-6},
   keywords={Servers;Heart beat;Payloads;Encryption;Computer hacking;Public key;Heartbleed;Heartbeat;SSL;TLS;Reverse Heartbleed},
-  doi={10.1109/LISAT.2017.8001980}
- }
+  doi={10.1109/LISAT.2017.8001980}}
 
 @article{Shors_Algorithm,
   title = {Quantum computation and Shor's factoring algorithm},
@@ -66,13 +65,13 @@
 }
 
 @misc{TLS_Fingerprinting,
-      title={Deciphering Malware's use of TLS (without Decryption)},
+      title={Deciphering Malware's use of TLS (without Decryption)}, 
       author={Blake Anderson and Subharthi Paul and David McGrew},
       year={2016},
       eprint={1607.01639},
       archivePrefix={arXiv},
       primaryClass={cs.CR},
-      url={https://arxiv.org/abs/1607.01639},
+      url={https://arxiv.org/abs/1607.01639}, 
 }
 
 @inproceedings{Active_Probing,
@@ -91,7 +90,6 @@ keywords = {censorship circumvention, active probing, Shadowsocks, Great Firewal
 location = {Virtual Event, USA},
 series = {IMC '20}
 }
-
 @misc{MITM_Image,
 author = {Alwazzeh, Muneer and Karaman, Sameer and Shamma, Mohammad},
 year = {2020},
@@ -110,7 +108,6 @@ note = {Figure 3}
   year = {2023},
   note = {[Accessed 14-11-2024]}
 }
-
 @article{Trojan-Probe,
 title = {TrojanProbe: Fingerprinting Trojan tunnel implementations by actively probing crafted HTTP requests},
 journal = {Computers \& Security},
@@ -163,17 +160,6 @@ note = {Figure 2}
   howpublished = {\url{https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/meek}},
   note = {Accessed: 2024-12-02}
 }
-@article{shadowsocks_analysis,
-title={Security Analysis of Shadowsocks(R) Protocol},
-volume={2022},
-rights={Copyright © 2022 Qingbing Ji et al.},
-ISSN={1939-0122},
-DOI={10.1155/2022/4862571},
-abstractNote={Shadowsocks(R) is a proxy software based on Socks5, which is the collective name of shadowsocks and shadowsocksR. Shadowsocks(R) is a private protocol without a handshake negotiation mechanism. Peng broke the confidentiality of shadowsocks by exploiting vulnerability in the shadowsocks protocol and decrypted the shadowsocks packets encrypted with none-AEAD encryption options using a redirection attack. Chen et al. started with the cryptographic algorithm used by shadowsocks(R) and preliminarily discussed the confidentiality of user data under the protection of shadowsocks(R) in theory. Based on Chen’s work, this paper further clarifies the shadowsocks(R) protocol format and studies the encryption mechanism of shadowsocks(R) from the perspective of protocol analysis. The vulnerability of the shadowsocks(R) encryption mechanism is found, and an attack method of shadowsocks(R) is proposed. The attack method is a passive attack and can decrypt the shadowsocks packets encrypted with any encryption option. Compared with Peng’s attack method, the method is more effective and more suitable for actual attacks. Finally, some methods to improve the protocol security of shadowsocks(R) are proposed.},
-number={1},
-journal={Security and Communication Networks},
-author={Ji, Qingbing and Rao, Zhihong and Chen, Man and Luo, Jie},
-year={2022},
-pages={4862571},
-language={en}
- }
+
+ @article{shadowsocks_analysis, title={Security Analysis of Shadowsocks(R) Protocol}, volume={2022}, rights={Copyright © 2022 Qingbing Ji et al.}, ISSN={1939-0122}, DOI={10.1155/2022/4862571}, abstractNote={Shadowsocks(R) is a proxy software based on Socks5, which is the collective name of shadowsocks and shadowsocksR. Shadowsocks(R) is a private protocol without a handshake negotiation mechanism. Peng broke the confidentiality of shadowsocks by exploiting vulnerability in the shadowsocks protocol and decrypted the shadowsocks packets encrypted with none-AEAD encryption options using a redirection attack. Chen et al. started with the cryptographic algorithm used by shadowsocks(R) and preliminarily discussed the confidentiality of user data under the protection of shadowsocks(R) in theory. Based on Chen’s work, this paper further clarifies the shadowsocks(R) protocol format and studies the encryption mechanism of shadowsocks(R) from the perspective of protocol analysis. The vulnerability of the shadowsocks(R) encryption mechanism is found, and an attack method of shadowsocks(R) is proposed. The attack method is a passive attack and can decrypt the shadowsocks packets encrypted with any encryption option. Compared with Peng’s attack method, the method is more effective and more suitable for actual attacks. Finally, some methods to improve the protocol security of shadowsocks(R) are proposed.}, number={1}, journal={Security and Communication Networks}, author={Ji, Qingbing and Rao, Zhihong and Chen, Man and Luo, Jie}, year={2022}, pages={4862571}, language={en} }
+
