fix included tikz figures location

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -228,7 +228,7 @@ Such attacks utilize the nature of the asymmetrical encryption and the key excha
 
 \begin{figure}[!h]
 \centering
-\input{figures/mitm}
+\input{include/mitm}
 \caption{MITM attack: Attacker (M) intercepts messages between client (C) and server (S).}
 \label{fig:mitm}
 % \vspace{-0.2cm}
@@ -284,7 +284,7 @@ Generally speaking, proxies and VPNs are based on the idea of side channel that 
 
 \begin{figure}[!h]
 \centering
-\input{figures/proxy}
+\input{include/proxy}
 \caption{Proxy-based network bypass: user (U) connects to server (S) through proxy (P), bypassing firewall restrictions (FW). Encrypted tunnel (Enc) prevents content inspection.}
 \label{fig:proxy}
 % \vspace{-0.2cm}
@@ -330,7 +330,7 @@ After the active probing mechanism was revealed, most HTTPS-based protocols adop
 
 \begin{figure}[!h]
     \centering
-    \input{figures/fallback}
+    \input{include/fallback}
     \caption{Fallback: Proxy servers filter (P) unauthentic incoming traffic (P) (Probes) and forward it to a real HTTP Server (F) and forward authentic traffic (C) to destination (D)}
     \label{fig:fallback}
 \end{figure}
