--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -108,7 +108,7 @@ note = {Figure 3}
   year = {2023},
   note = {[Accessed 14-11-2024]}
 }
-@article{Trojan-Probe,
+@article{Trojan_Probe,
 title = {TrojanProbe: Fingerprinting Trojan tunnel implementations by actively probing crafted HTTP requests},
 journal = {Computers \& Security},
 volume = {148},
@@ -155,11 +155,27 @@ note = {Figure 2}
 }
 @misc{meek,
   author = {{The Tor Project Anti-censorship Developers}},
-  title = {Meek },
+  title = {Meek},
   year = {2024},
   howpublished = {\url{https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/meek}},
   note = {Accessed: 2024-12-02}
 }
 
- @article{shadowsocks_analysis, title={Security Analysis of Shadowsocks(R) Protocol}, volume={2022}, rights={Copyright © 2022 Qingbing Ji et al.}, ISSN={1939-0122}, DOI={10.1155/2022/4862571}, abstractNote={Shadowsocks(R) is a proxy software based on Socks5, which is the collective name of shadowsocks and shadowsocksR. Shadowsocks(R) is a private protocol without a handshake negotiation mechanism. Peng broke the confidentiality of shadowsocks by exploiting vulnerability in the shadowsocks protocol and decrypted the shadowsocks packets encrypted with none-AEAD encryption options using a redirection attack. Chen et al. started with the cryptographic algorithm used by shadowsocks(R) and preliminarily discussed the confidentiality of user data under the protection of shadowsocks(R) in theory. Based on Chen’s work, this paper further clarifies the shadowsocks(R) protocol format and studies the encryption mechanism of shadowsocks(R) from the perspective of protocol analysis. The vulnerability of the shadowsocks(R) encryption mechanism is found, and an attack method of shadowsocks(R) is proposed. The attack method is a passive attack and can decrypt the shadowsocks packets encrypted with any encryption option. Compared with Peng’s attack method, the method is more effective and more suitable for actual attacks. Finally, some methods to improve the protocol security of shadowsocks(R) are proposed.}, number={1}, journal={Security and Communication Networks}, author={Ji, Qingbing and Rao, Zhihong and Chen, Man and Luo, Jie}, year={2022}, pages={4862571}, language={en} }
+@article{shadowsocks_analysis,
+	journal = {Security and Communication Networks},
+	doi = {10.1155/2022/4862571},
+	issn = {1939-0122},
+	language = {en},
+	publisher = {Hindawi Limited},
+	title = {Security Analysis of Shadowsocks(R) Protocol},
+	url = {http://dx.doi.org/10.1155/2022/4862571},
+	volume = {2022},
+	author = {Ji, Qingbing and Rao, Zhihong and Chen, Man and Luo, Jie},
+	editor = {Zhou, Zhili},
+	pages = {1--6},
+	date = {2022-01-19},
+	year = {2022},
+	month = {1},
+	day = {19},
+}
 
