--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -72,7 +72,7 @@ The primary idea of restriction is simple: as an Internet service provider (ISP)
 The primary idea of a proxy is also simple: through an external server as a relay (or springboard) to reach the site blocked by the local network.
 
 \section{Related Work}
-There are some existing works that discuss those technologies in specified aspects, such as TLS fingerprinting\cite{TLS_Fingerprinting}, active probing \cite{Active_Probing}, and analysis (or audition) of protocols \cite{shadowsocks_analysis} \cite{Trojan-Probe}. In this article, we intend to give an overview of these technologies with practical examples and real-world scenarios.
+There are some existing works that discuss those technologies in specified aspects, such as TLS fingerprinting\cite{TLS_Fingerprinting}, active probing \cite{Active_Probing}, and analysis (or audition) of protocols \cite{shadowsocks_analysis} \cite{Trojan_Probe}. In this article, we intend to give an overview of these technologies with practical examples and real-world scenarios.
 
 \section{Methodology}
 We analyze typical protocols statically in our cloud servers and visualize the data.
