--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,4 +1,4 @@
-@INPROCEEDINGS{Heartbleed,
+@inproceedings{Heartbleed,
   author={Kyatam, Shashank and Alhayajneh, Abdullah and Hayajneh, Thaier},
   booktitle={2017 IEEE Long Island Systems, Applications and Technology Conference (LISAT)}, 
   title={Heartbleed attacks implementation and vulnerability}, 
@@ -29,7 +29,7 @@
 	title = {{G}it{H}ub - lsauer/entropy: ent is a small, fast command line utility, plotting various entropy related metrics of files or pipe/stdin streams --- github.com},
 	howpublished = {\url{https://github.com/lsauer/entropy}},
 	year = {2011},
-	note = {[Accessed 12-11-2024]},
+	note = {[Accessed 12-11-2024]}
 }
 
 @misc{Shadowsocks,
@@ -37,7 +37,7 @@
 	title = {{G}it{H}ub - shadowsocks/shadowsocks-org: www.shadowsocks.org --- github.com},
 	howpublished = {\url{https://github.com/shadowsocks/shadowsocks-org}},
 	year = {2012},
-	note = {[Accessed 20-11-2024]},
+	note = {[Accessed 20-11-2024]}
 }
 
 @misc{Trojan_gfw,
@@ -45,7 +45,7 @@
 	title = {{G}it{H}ub - trojan-gfw/trojan: {A}n unidentifiable mechanism that helps you bypass {G}{F}{W}. --- github.com},
 	howpublished = {\url{https://github.com/trojan-gfw/trojan}},
 	year = {2017},
-	note = {[Accessed 20-11-2024]},
+	note = {[Accessed 20-11-2024]}
 }
 
 @misc{Obfs4,
@@ -53,7 +53,7 @@
 	title = {{G}it{H}ub - {Y}awning/obfs4: {T}he obfourscator ({C}ourtesy mirror) --- github.com},
 	howpublished = {\url{https://github.com/Yawning/obfs4}},
 	year = {2014},
-	note = {[Accessed 20-11-2024]},
+	note = {[Accessed 20-11-2024]}
 }
 
 @misc{Naiveproxy,
@@ -61,7 +61,7 @@
 	title = {{G}it{H}ub - klzgrad/naiveproxy: {M}ake a fortune quietly --- github.com},
 	howpublished = {\url{https://github.com/klzgrad/naiveproxy}},
 	year = {2018},
-	note = {[Accessed 20-11-2024]},
+	note = {[Accessed 20-11-2024]}
 }
 
 @misc{TLS_Fingerprinting,
@@ -71,7 +71,7 @@
       eprint={1607.01639},
       archivePrefix={arXiv},
       primaryClass={cs.CR},
-      url={https://arxiv.org/abs/1607.01639}, 
+      url={https://arxiv.org/abs/1607.01639}
 }
 
 @inproceedings{Active_Probing,
@@ -116,7 +116,7 @@ pages = {104147},
 year = {2025},
 issn = {0167-4048},
 doi = {https://doi.org/10.1016/j.cose.2024.104147},
-url = {\url{https://www.sciencedirect.com/science/article/pii/S0167404824004528}},
+url = {https://www.sciencedirect.com/science/article/pii/S0167404824004528},
 author = {Liuying Lv and Peng Zhou},
 keywords = {Hidden tunnel, Active fingerprinting, Censorship, Code audit, Anti-identifiability},
 abstract = {Trojan Probe},
@@ -176,6 +176,6 @@ note = {Figure 2}
 	date = {2022-01-19},
 	year = {2022},
 	month = {1},
-	day = {19},
+	day = {19}
 }
 
