--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -7,8 +7,6 @@
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{algorithmic}
 \usepackage{graphicx}
-% Graphic path
-% \graphicspath{{./pics/}}
 \usepackage{textcomp}
 \usepackage{xcolor}
 \usepackage{orcidlink}
@@ -38,13 +36,7 @@
 
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
-    
-% \usepackage[
-% backend=biber,
-% style=IEEEtran,
-% sorting=ynt
-% ]{biblatex}
-% \addbibresource{ref.bib}
+
 \begin{document}
 
 
@@ -341,7 +333,7 @@ TOR provided domain fronting \cite{domainfronting} based meek bridge \cite{meek}
 
 \bibliographystyle{ieeetr}
 
-\bibliography{ref}
+\bibliography{paper}
 
 \appendix
 \section{Setting Up Proxy Server}
