Do chores and clean some spell issues

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -221,7 +221,7 @@ Such attacks utilize the nature of the asymmetrical encryption and the key excha
 \begin{figure}[!h]
 \centering
 \input{include/mitm}
-\caption{MITM attack: Attacker (M) intercepts messages between client (C) and server (S).}
+\caption{MITM attack: attacker (M) intercepts messages between client (C) and server (S).}
 \label{fig:mitm}
 % \vspace{-0.2cm}
 \end{figure}
@@ -323,7 +323,7 @@ After the active probing mechanism was revealed, most HTTPS-based protocols adop
 \begin{figure}[!h]
     \centering
     \input{include/fallback}
-    \caption{Fallback: Proxy servers filter (P) unauthentic incoming traffic (P) (Probes) and forward it to a real HTTP Server (F) and forward authentic traffic (C) to destination (D)}
+    \caption{Fallback: proxy servers filter (P) unauthentic incoming traffic (P) (Probes) and forward it to a real HTTP server (F) and forward authentic traffic (C) to destination (D)}
     \label{fig:fallback}
 \end{figure}
 
